# surreal.rs

./: Cargo.toml  README.md
src/: lib.rs
src/core/: array.rs  datetime.rs  duration.rs  id.rs  ident.rs  kw.rs  mod.rs  number.rs  object.rs  table.rs  value.rs
src/methods/: mod.rs
